--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -73,6 +73,7 @@
     "vite-plugin-checker": "^0.8.0",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-svgr": "^4.3.0",
+    "vite-plugin-terminal": "^1.2.0",
     "vite-tsconfig-paths": "^5.1.3",
     "vitest": "^2.1.8"
   }
