--- a/packages/utils/tsconfig.json
+++ b/packages/utils/tsconfig.json
@@ -13,7 +13,7 @@
     "esModuleInterop": false,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true
+    "noEmit": true,
   },
   "include": ["src"]
 }
